# n8n-mcp

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  Dockerfile.test  Dockerfile.test.dockerignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: release.yml
src/n8n_mcp/: __init__.py  __main__.py  asgi.py  auth_provider.py  client.py  config.py  server.py
tests/: test_auth.py  test_server.py
