[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n8n-mcp"
dynamic = ["version"]
description = "MCP Server untuk n8n REST API — kelola workflows, executions, credentials, tags, dan variables via Model Context Protocol."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "andhit-r", email = "andhitia.r@gmail.com" }]
keywords = ["mcp", "fastmcp", "n8n", "workflow", "automation", "model-context-protocol"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27",
  "pydantic-settings>=2.0",
  "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/andhit-r/n8n-mcp"
Repository = "https://github.com/andhit-r/n8n-mcp"
Issues = "https://github.com/andhit-r/n8n-mcp/issues"

[project.scripts]
n8n-mcp = "n8n_mcp.__main__:main"

[tool.hatch.version]
path = "src/n8n_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/n8n_mcp"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
